explore-page-comleted

--- a/FrontPage/app/globals.css
+++ b/FrontPage/app/globals.css
@@ -162,11 +162,9 @@ img {
   width: 180px;
 }
 
-/* Explore Section */
-.explore {
-  width: 100vw;
-  height: fit-content;
-}
+/* Roles */
+
+
 
 /* Profiles Section */
 .profiles {
