--- a/FrontPage/app/globals.css
+++ b/FrontPage/app/globals.css
@@ -29,6 +29,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 /* Layout & Page Structure */
@@ -187,7 +188,7 @@ img {
   justify-content: center;
   align-items: center;
   flex: 1;
-  background-color: #011128;
+  background-color: #0a192f;
 }
 
 .login-box,
@@ -222,7 +223,7 @@ img {
   width: 100%;
   padding: 10px;
   background-color: #0a192f;
-  border: 1px solid #ffffff;
+  border: 1px solid #64ffda;
   border-radius: 5px;
   color: #ccd6f6;
   font-size: 16px;
@@ -233,8 +234,8 @@ img {
 .signup-button {
   width: 100%;
   padding: 10px;
-  background-color: #0d0ad0;
-  color: #f6f6f6;
+  background-color: #64ffda;
+  color: #0a192f;
   border: none;
   border-radius: 5px;
   font-size: 16px;
@@ -244,7 +245,7 @@ img {
 
 .login-button:hover,
 .signup-button:hover {
-  background-color: #ffffff;
+  background-color: #52d1b2;
 }
 
 /* Links */
@@ -256,14 +257,14 @@ img {
 
 .signup-link a,
 .login-link a {
-  color: #ffffff;
+  color: #64ffda;
   text-decoration: none;
   transition: color 0.3s ease;
 }
 
 .signup-link a:hover,
 .login-link a:hover {
-  color: #ffffff;
+  color: #52d1b2;
 }
 
 /* Footer */
@@ -286,3 +287,7 @@ footer p {
   gap: 10px;
 }
 
+.button_nav{
+  height: fit-content;
+  width: fit-content;
+}
